@@ -11,104 +11,85 @@
     <properties>
         <oppgavehandtering-security.version>2.00.09</oppgavehandtering-security.version>
         <oppgavehandtering.resilience.version>1.00.03</oppgavehandtering.resilience.version>
-        <opensaml.version>3.4.3</opensaml.version>
+        <opensaml.version>3.4.5</opensaml.version>
 
-        <jetty.version>9.4.17.v20190418</jetty.version>
-        <jersey.version>2.26</jersey.version>
+        <jetty.version>9.4.35.v20201120</jetty.version>
+        <jersey.version>2.29</jersey.version>
         <logback.version>1.2.3</logback.version>
-        <slf4j.version>1.7.25</slf4j.version>
-        <flyway.version>4.2.0</flyway.version>
-        <h2.version>1.4.196</h2.version>
-        <hikaricp.version>2.7.4</hikaricp.version>
-        <commons.io.version>2.6</commons.io.version>
-        <commons.lang.version>3.7</commons.lang.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <flyway.version>5.2.4</flyway.version>
+        <h2.version>1.4.200</h2.version>
+        <hikaricp.version>3.4.5</hikaricp.version>
+        <commons.io.version>2.8.0</commons.io.version>
+        <commons.lang.version>3.11</commons.lang.version>
         <commons.configuration.version>2.7</commons.configuration.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
+        <!--     assertj.version version   -->
         <assertj.version>3.8.0</assertj.version>
-        <gson.version>2.8.2</gson.version>
+        <gson.version>2.8.6</gson.version>
         <prometheus.version>0.6.0</prometheus.version>
         <rest.assured.version>2.9.0</rest.assured.version>
         <swagger.version>1.5.12</swagger.version>
         <swagger-ui.version>3.26.1</swagger-ui.version>
-        <logstash.encoder.version>6.5</logstash.encoder.version>
+        <logstash.encoder.version>6.6</logstash.encoder.version>
         <jose4j.version>0.6.3</jose4j.version>
-        <nimbusds.version>5.47</nimbusds.version>
+        <nimbusds.version>8.30</nimbusds.version>
         <abac.attribute.version>3.2.5</abac.attribute.version>
         <ojdbc.version>12.2.0.1</ojdbc.version>
         <cxf.version>3.2.2</cxf.version>
-        <pact.version>3.5.13</pact.version>
+        <pact.version>3.5.25</pact.version>
         <ldaptive.version>1.0.5</ldaptive.version>
         <logback-sylog4j.version>1.0.0</logback-sylog4j.version>
-        <ehcache.version>3.5.2</ehcache.version>
-        <reactive-streams.version>1.0.2</reactive-streams.version>
+        <ehcache.version>3.9.0</ehcache.version>
+        <reactive-streams.version>1.0.3</reactive-streams.version>
 
         <!--Managed transitive deps -->
         <akka.actor.version>2.5.4</akka.actor.version>
         <jackson.version>2.10.5</jackson.version>
-        <scala.reflect.version>2.12.3</scala.reflect.version>
-        <scala.library.version>2.12.3</scala.library.version>
-        <scala.parser.combinators.version>1.0.6</scala.parser.combinators.version>
-        <javax.servlet.version>3.1.0</javax.servlet.version>
+        <scala.reflect.version>2.12.12</scala.reflect.version>
+        <scala.library.version>2.12.12</scala.library.version>
+        <scala.parser.combinators.version>1.1.2</scala.parser.combinators.version>
+        <javax.servlet.version>4.0.1</javax.servlet.version>
+
+        <netty.version>4.1.56.Final</netty.version>
 
 
-        <!--
-        <netty.version>4.1.31.Final</netty.version>
-        <netty.version>4.0.51.Final</netty.version>
-        <netty.version>4.1.0.Final</netty.version>
-        -->
-        <netty.version>4.1.31.Final</netty.version>
-
-
-
-
-        <bouncycastle.version>1.58</bouncycastle.version>
-        <commons.codec.version>1.10</commons.codec.version>
+        <bouncycastle.version>1.68</bouncycastle.version>
+        <commons.codec.version>1.15</commons.codec.version>
         <commons.collections.version>3.2.2</commons.collections.version>
         <jsr.305.version>3.0.2</jsr.305.version>
-        <httpclient.version>4.5.1</httpclient.version>
-        <guava.version>19.0</guava.version>
-        <javaassist.version>3.22.0-CR2</javaassist.version>
-        <asm.version>5.2</asm.version>
-        <xmlsec.version>2.1.0</xmlsec.version>
-        <joda-time.version>2.9</joda-time.version>
-        <org.dmfs.iterators.version>1.5</org.dmfs.iterators.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <guava.version>30.1-jre</guava.version>
+        <javaassist.version>3.27.0-GA</javaassist.version>
+        <asm.version>9.0</asm.version>
+        <xmlsec.version>2.2.1</xmlsec.version>
+        <joda-time.version>2.10.9</joda-time.version>
+        <org.dmfs.iterators.version>1.20</org.dmfs.iterators.version>
         <javax.mail.version>1.4.7</javax.mail.version>
         <commons.logging.version>1.2</commons.logging.version>
-        <gson.version>2.8.1</gson.version>
-        <kotlin-stdlib.version>1.2.0</kotlin-stdlib.version>
-        <httpmime.version>4.5.3</httpmime.version>
+        <kotlin-stdlib.version>1.4.21</kotlin-stdlib.version>
+        <httpmime.version>4.5.13</httpmime.version>
 
         <!--Build settings -->
-        <maven.surefire.version>2.19.1</maven.surefire.version>
-        <maven.failsafe.version>2.20.1</maven.failsafe.version>
-        <scala.maven.version>3.3.1</scala.maven.version>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.surefire.version>3.0.0-M2</maven.surefire.version>
+        <maven.failsafe.version>3.0.0-M2</maven.failsafe.version>
+        <scala.maven.version>4.4.0</scala.maven.version>
+        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
 
         <!--Test -->
-        <junit.version>5.3.1</junit.version>
-        <junit.platform.version>1.0.2</junit.platform.version>
-        <pitest-junit5-plugin.version>0.7</pitest-junit5-plugin.version>
-        <pitest-maven.version>1.4.3</pitest-maven.version>
-        <mockito.version>1.9.5</mockito.version>
-        <!--
+        <junit.version>5.7.0</junit.version>
+        <junit.platform.version>1.3.2</junit.platform.version>
+        <pitest-junit5-plugin.version>0.12</pitest-junit5-plugin.version>
+        <pitest-maven.version>1.6.2</pitest-maven.version>
+        <mockito.version>1.10.19</mockito.version>
+        <gatling.version>2.3.1</gatling.version>
+        <gatling-maven-plugin.version>3.1.1</gatling-maven-plugin.version>
 
-                <gatling.version>2.3.1</gatling.version>
-                <gatling-maven-plugin.version>2.2.4</gatling-maven-plugin.version>
-
-                   <gatling.version>3.0.1.1</gatling.version>
-                   <gatling-maven-plugin.version>3.0.1</gatling-maven-plugin.version>
-           -->
-
-
-        <gatling.version>2.3.0</gatling.version>
-        <gatling-maven-plugin.version>2.2.4</gatling-maven-plugin.version>
-
-
-
-        <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
+        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
+        <maven-toolchains-plugin.version>3.0.0</maven-toolchains-plugin.version>
+        <dependency-check-maven.version>6.0.5</dependency-check-maven.version>
 
     </properties>
 
@@ -116,6 +97,14 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!--            Beholde denne dependency til pakken swagger-jersey2-jaxrs inneholde validation-api >= 2.0.1.Final -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>2.0.1.Final</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.glassfish.jersey</groupId>
                 <artifactId>jersey-bom</artifactId>
@@ -775,7 +764,9 @@
                         </executions>
                         <configuration>
                             <coverageThreshold>70</coverageThreshold>
-                            <excludedTestClasses>no.nav.sak.SakResourceIntegrationTest,no.nav.sak.server.StartJettyTest</excludedTestClasses>
+                            <excludedTestClasses>
+                                no.nav.sak.SakResourceIntegrationTest,no.nav.sak.server.StartJettyTest
+                            </excludedTestClasses>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -808,96 +799,74 @@
     </profiles>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>${scala.maven.version}</version>
+                    <executions>
+                        <execution>
+                            <id>scala-compile-first</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>scala-test-compile</id>
+                            <phase>process-test-resources</phase>
+                            <goals>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.version}</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.junit.platform</groupId>
+                            <artifactId>junit-platform-surefire-provider</artifactId>
+                            <version>${junit.platform.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.junit.jupiter</groupId>
+                            <artifactId>junit-jupiter-engine</artifactId>
+                            <version>${junit.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.junit.vintage</groupId>
+                            <artifactId>junit-vintage-engine</artifactId>
+                            <version>${junit.version}</version>
+                        </dependency>
+                    </dependencies>
+                    <configuration>
+                        <argLine>
+                            --illegal-access=permit
+                        </argLine>
+                        <properties>
+                            <excludedGroups>integration-test</excludedGroups>
+                        </properties>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>io.gatling</groupId>
+                    <artifactId>gatling-maven-plugin</artifactId>
+                    <version>${gatling-maven-plugin.version}</version>
+                    <configuration>
+                        <failOnError>true</failOnError>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-                <version>${scala.maven.version}</version>
-                <executions>
-                    <execution>
-                        <id>scala-compile-first</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>add-source</goal>
-                            <goal>compile</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>scala-test-compile</id>
-                        <phase>process-test-resources</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit.platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.vintage</groupId>
-                        <artifactId>junit-vintage-engine</artifactId>
-                        <version>${junit.version}</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <properties>
-                        <excludeTags>integration-test</excludeTags>
-                    </properties>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>no.nav.sak.server.StartJetty</mainClass>
-                                </transformer>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                            </transformers>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
-                    </execution>
-                </executions>
-                <configuration>
-                    <finalName>sak</finalName>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>io.gatling</groupId>
-                <artifactId>gatling-maven-plugin</artifactId>
-                <version>${gatling-maven-plugin.version}</version>
-                <configuration>
-                    <failOnError>true</failOnError>
-                </configuration>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>${dependency-check-maven.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -911,9 +880,6 @@
                         </goals>
                         <configuration>
                             <rules>
-                                <requireJavaVersion>
-                                    <version>1.8</version>
-                                </requireJavaVersion>
                                 <dependencyConvergence/>
                             </rules>
                         </configuration>
@@ -921,9 +887,61 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.owasp</groupId>
-                <artifactId>dependency-check-maven</artifactId>
-                <version>3.1.1</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+                <version>${maven-toolchains-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>toolchain</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <toolchains>
+                        <jdk>
+                            <version>11</version>
+                            <vendor>openjdk</vendor>
+                        </jdk>
+                    </toolchains>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${maven-shade-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>no.nav.sak.server.StartJetty</mainClass>
+                                </transformer>
+                                <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            </transformers>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>module-info.class</exclude>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <finalName>sak</finalName>
+                </configuration>
             </plugin>
         </plugins>
     </build>
